@@ -15,7 +15,7 @@ public class ConvertListTest {
         List<int[]> in = new ArrayList<>();
         in.add(new int[] {1});
         in.add(new int[] {2, 3});
-        List<Integer> expect = Arrays.asList(1, 2, 3);
+        List<Integer> expect = List.of(1, 2, 3);
         assertThat(ru.job4j.collection.ConvertList.convert(in), is(expect));
     }
 }
